@@ -10,7 +10,8 @@ PERL_MODULES="YAML"
 MISSING=$(mktemp)
 
 if test -z "$(which cpanm 2>/dev/null)"; then
-    >&2 echo "WARNING: required cpanm missing"
+    echo -n "Checking...$a"
+    echo "WARNING: required cpanm missing"
     echo "cpanm" >>$MISSING
 fi
 
@@ -19,7 +20,7 @@ AUTOTOOLS="/usr/bin/make /usr/bin/automake /usr/bin/autoconf"
 for a in /usr/lib/rpm/perl.req $AUTOTOOLS; do
     echo -n "Checking...$a"
     if ! test -x "$a"; then
-        >&2 echo "...MISSING"
+        echo "...MISSING"
         echo "$a" >>$MISSING
     else
         echo "...found."
@@ -28,7 +29,7 @@ done
 
 for a in ${PERL_MODULES}; do
     if ! perl -M$a -e 1 2>/dev/null; then
-        >&2 echo "WARNING: required YAML module missing"
+        echo "WARNING: required YAML module missing"
         echo $a >>$MISSING
     fi
 done
@@ -40,6 +41,6 @@ if ! test -s "$MISSING"; then
         make -f Makefile.perl-req clean
         make -f Makefile.perl-req DEBUG="$DEBUG"
     else
-        >&2 echo "ERROR: missing Makefile.perl-req"
+        echo "ERROR: missing Makefile.perl-req"
     fi
 fi
